# authorlens

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/demo/: labels.json  pair_01_gpt4.txt  pair_01_human.txt  pair_02_gpt4.txt  pair_02_human.txt  pair_03_gpt4.txt  pair_03_human.txt  pair_04_gpt4.txt  pair_04_human.txt  pair_05_gpt4.txt  pair_05_human.txt  pair_06_gpt4.txt  pair_06_human.txt  pair_07_gpt4.txt  pair_07_human.txt  pair_08_gpt4.txt  pair_08_human.txt  pair_09_gpt4.txt  pair_09_human.txt  pair_10_gpt4.txt  pair_10_human.txt
src/authorlens/: api.py  cli.py  embedder.py  features.py  scorer.py
src/authorlens/templates/: index.html
tests/: test_api.py  test_cli.py  test_demo.py  test_embedder.py  test_features.py  test_scorer.py  test_smoke.py
