[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "authorlens"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers==3.0.1",
    "scikit-learn==1.5.1",
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "typer==0.12.3",
    "rich==13.7.1",
    "numpy==1.26.4",
]

[project.scripts]
authorlens = "authorlens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
